Fix alignment

--- a/frontend/src/components/app/sidenavcontainer.css
+++ b/frontend/src/components/app/sidenavcontainer.css
@@ -12,7 +12,7 @@
     -o-transition: min-width 0.2s;
     -ms-transition: min-width 0.2s;
     transition: min-width 0.2s;
-    min-height: 2400px;
+    min-height: 1200px;
   }
   .sidenav---sidenav---_2tBP.sidenav---collapsed---LQDEv .sidenav---sidenav-nav---3tvij .sidenav---sidenav-navitem---uwIJ- .sidenav---sidenav-subnav---1EN61 {
     display: none;
