--- a/frontend/src/components/app/topbar.css
+++ b/frontend/src/components/app/topbar.css
@@ -3,7 +3,7 @@
     position: absolute;
     height: 5%;
     width: 100%;
-    min-width: 2200px;
+    min-width: 1200px;
     border-bottom: 1px solid;
     z-index: 2;
 }
