--- a/frontend/src/components/container.css
+++ b/frontend/src/components/container.css
@@ -5,8 +5,19 @@
     left: 5%;
     width: 100%;
     height: 100%;
-    min-width: 1800px;
+    min-width: 800px;
 }
+
+.container-xl {
+    position: absolute;
+    z-index: 3;
+    top: 5%;
+    left: 5%;
+    width: 100%;
+    height: 100%;
+    min-width: 800px;
+}
+
 .container-header{
     float: left;
 }
